[Chore] Add translation in the farmer dashboard (#20)
* Localized api and added new branch

* Implemented localization module routing, and json scripts for translations.

* Implemented routing of localization modules and json scripts for translations.

* Changed default language back to ph

* Changed default language from ph to fil

* Change strings into routing variables

* Added change language on the tutorial page

* Language update for Logout, Japanese, and Cebuano

* Fix for submitted reports header translation

* Added Cebuano translation

* Added translation for logout, not added yet

* Downgrade translation dependency version

* Fix tests setup

* Fix redundant import

* Add null-safe destroy hook

* Lint code

* Make lint validation happen earlier

This is to catch obvious defects much faster. Running tests is expensive and takes more time than linting.

Co-authored-by: gpassport <gppasaporte@student.apc.edu.ph>
Co-authored-by: JG Rivera <rivera.jga10@gmail.com>

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,7 @@
         <h1 *ngIf="currentSeedStage; else noCurrentSeedStage" style="padding-top: 1em;">{{
           translateSeedStage(currentSeedStage) }}</h1>
         <ng-template #noCurrentSeedStage>
-          <h1 style="padding-top: 1em;">Simulan ang pagsumite ng report</h1>
+          <h1 style="padding-top: 1em;"routerLink='/home' translate>home.stage-1_title</h1>
         </ng-template>
 
         <p *ngIf="getExistingCrop()" style="margin-bottom: 2em; font-size: 16px;">
@@ -35,13 +35,13 @@
         <img [src]="currentSeedStageImagePath"
           style="max-height: 320px; padding-left: 2em; padding-right: 2em; padding-bottom: 1em;" />
 
-        <p style="margin-bottom: 0.75em">Maari kang magpatuloy kung</p>
+        <p style="margin-bottom: 0.75em" routerLink='/home' translate>home.report-button-header</p>
 
         <button *ngIf="nextSeedStage" id="aniButton" (click)="onBeginSubmitFarmerReport()">
           {{ translateSeedStage(nextSeedStage) }}
         </button>
 
-        <p style="margin-bottom: 2em">Kailangan kumuha ng litrato bago magsumite ng report</p>
+        <p style="margin-bottom: 2em"  routerLink='/home' translate>home.report-button-footer</p>
       </ion-card-content>
     </ion-card>
   </div>
@@ -49,14 +49,14 @@
   <div id="ani-wrapper" style="margin-top:-10px" *ngIf="hasPlantedFarmerReport()">
     <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
       <ion-card-content style="padding: 10px">
-        <h1>Inaasahang...</h1>
+        <h1 routerLink='/home' translate>home.profit-header</h1>
         <ion-item-divider style="margin-top: -25px; margin-bottom: 1em; background: rgba(0,0,0,0.0);">
         </ion-item-divider>
 
         <div class="ani-content" style="text-align: center; margin-bottom: 2em;">
-          <h1 style="font-size:50px; line-height: 50px; color:#242424">{{ estimatedYieldDayEarliest }} - {{
-            estimatedYieldDayLatest }} na araw</h1>
-          <p>Ang aabutin bago mamunga ang iyong mga pananim</p>
+          <h1 style="font-size:50px; line-height: 50px; color:#242424" routerLink='/home' translate>{{ estimatedYieldDayEarliest }} - {{
+            estimatedYieldDayLatest }} <h1 style="font-size:50px; line-height: 50px; color:#242424" translate>home.bilang-na-araw</h1></h1>
+          <p routerLink='/home' translate>home.profit-footer</p>
         </div>
 
         <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 10px; margin-bottom: 10px">
@@ -64,13 +64,13 @@
             <ion-col>
               <ion-chip style="padding: 1.5em">
                 <ion-icon name="cart" color="primary"></ion-icon>
-                <ion-label>Maaaring kitain: <br>{{ estimatedProfit | currency:'PHP '}}</ion-label>
+                <ion-label routerLink='/home' translate>home.expected-profit<br>{{ estimatedProfit | currency:'PHP '}}</ion-label>
               </ion-chip>
             </ion-col>
             <ion-col style="text-align: right">
               <ion-chip style="padding: 1.5em">
                 <ion-icon name="speedometer" color="primary"></ion-icon>
-                <ion-label>Maaaring bunga: <br>{{ estimatedYieldAmount | number:'1.0':'en-US' }} kg</ion-label>
+                <ion-label routerLink='/home' translate>home.expected-yield<br>{{ estimatedYieldAmount | number:'1.0':'en-US' }} kg</ion-label>
               </ion-chip>
             </ion-col>
           </ion-row>
@@ -83,7 +83,7 @@
   <div id="ani-wrapper" style="margin-top:-10px" *ngIf="hasSubmittedReports()">
     <ion-card style="width: 500px;box-shadow:0 0 4px 4px rgba(0,0,0,0.2); border-radius:30px;">
       <ion-card-content style="padding: 10px">
-        <h1>Mga nasumiteng report...</h1>
+        <h1 routerLink='/home' translate>home.submitted-reports</h1>
         <ion-item-divider style="margin-top: -25px; background: rgba(0,0,0,0.0);"></ion-item-divider><br>
 
         <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 20px; margin-bottom: 10px">
